[gd_scene load_steps=14 format=2]

[ext_resource path="res://SceneScripts/on-site.gd" type="Script" id=1]
[ext_resource path="res://SceneScripts/main-sprite.tscn" type="PackedScene" id=2]
[ext_resource path="res://SceneScripts/stall.tscn" type="PackedScene" id=3]
[ext_resource path="res://SceneScripts/egg-coop.tscn" type="PackedScene" id=4]
[ext_resource path="res://SceneScripts/ingredient-entity.tscn" type="PackedScene" id=5]
[ext_resource path="res://SceneScripts/pork-butcher.tscn" type="PackedScene" id=6]
[ext_resource path="res://SceneScripts/wheat-field.tscn" type="PackedScene" id=7]
[ext_resource path="res://SceneScripts/squid-pond.tscn" type="PackedScene" id=8]
[ext_resource path="res://SceneScripts/magical-grill.tscn" type="PackedScene" id=9]
[ext_resource path="res://SceneScripts/dish-entity.tscn" type="PackedScene" id=10]
[ext_resource path="res://SceneScripts/Background.tscn" type="PackedScene" id=11]
[ext_resource path="res://CustomerSceneScripts/aswang-cust.tscn" type="PackedScene" id=12]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 26, 333 )

[node name="Node2D" type="Node"]
script = ExtResource( 1 )

[node name="Caldo-player" parent="." instance=ExtResource( 2 )]
position = Vector2( 408, 273 )
z_index = 1

[node name="ingredient-drop" parent="." instance=ExtResource( 5 )]
position = Vector2( -42, 49 )

[node name="dish-ready" parent="." groups=["dishes"] instance=ExtResource( 10 )]
position = Vector2( 435, -44 )

[node name="Coop" parent="." instance=ExtResource( 4 )]
position = Vector2( 264, 320 )

[node name="Butcher" parent="." instance=ExtResource( 6 )]
position = Vector2( 48, 552 )

[node name="Field" parent="." instance=ExtResource( 7 )]
position = Vector2( 264, 224 )

[node name="Pond" parent="." instance=ExtResource( 8 )]
position = Vector2( 48, 48 )

[node name="Grill" parent="." instance=ExtResource( 9 )]
position = Vector2( 440, 50 )

[node name="MapBg" parent="." instance=ExtResource( 11 )]
z_index = -1

[node name="Aswang-enemy" parent="." groups=["customers"] instance=ExtResource( 12 )]
position = Vector2( 960, -102 )

[node name="StallNodes" type="Area2D" parent="." groups=["farm_set"]]
position = Vector2( 525, 300 )

[node name="Stall-area" parent="StallNodes" instance=ExtResource( 3 )]
position = Vector2( 0, -225 )

[node name="Stall-area2" parent="StallNodes" instance=ExtResource( 3 )]
position = Vector2( 0, -75 )

[node name="Stall-area3" parent="StallNodes" instance=ExtResource( 3 )]
position = Vector2( 0, 75 )

[node name="Stall-area4" parent="StallNodes" instance=ExtResource( 3 )]
position = Vector2( 0, 225 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StallNodes"]
shape = SubResource( 1 )

[node name="HUD" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Label" type="Label" parent="HUD"]
margin_right = 40.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0, 0, 0, 1 )

[connection signal="ingredient_freed" from="ingredient-drop" to="." method="_on_ingredientdrop_ingredient_freed"]
[connection signal="dish_freed" from="dish-ready" to="." method="_on_dishready_dish_freed"]
[connection signal="coop_entered" from="Coop" to="." method="_on_Coop_coop_entered"]
[connection signal="butcher_entered" from="Butcher" to="." method="_on_Butcher_butcher_entered"]
[connection signal="field_entered" from="Field" to="." method="_on_Field_field_entered"]
[connection signal="pond_entered" from="Pond" to="." method="_on_Pond_pond_entered"]
[connection signal="player_cooking" from="Grill" to="." method="_on_Grill_player_cooking"]
[connection signal="customer_satisfied" from="Aswang-enemy" to="." method="_on_Aswangenemy_customer_satisfied"]
